cashier-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cashier-app
  namespace: default
spec:
  selector:
    matchLabels:
      name: cashier-app
  replicas: 2 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        name: cashier-app
    spec:
      containers:
        - name: cashier-app
          image: nikkomdoza/cashier-app:v1.0
          ports:
            - containerPort: 8081
