cashier-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cashier-app
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 81
      targetPort: 8081
  selector:
    name: cashier-app
