cashier-app/ingress.yaml
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  name: "cashier-app-ingress"
  namespace: "default"
spec:
  backend:
    serviceName: "cashier-app-service"
    servicePort: 81
